<resources>

    <!--   大标题   -->
    <string name="app_name">Android Base Knowledge Test</string>
    <string name="first_name">11111</string>
    <string name="second_name">22222</string>
    <string name="third_name">33333</string>
    <string name="go_2_launch_mode">启动模式</string>
    <string name="go_2_activity_life_cycle">Activity生命周期</string>
    <string name="go_2_android_service">android Service</string>
    <string name="go_2_android_fragment">android Fragment</string>
    <string name="go_2_recycler_view">RecyclerView</string>
    <string name="tv_go_2_activity_activity_manager">ActivityForResult</string>
    <string name="go_2_usb_test_client">Usb Test Client</string>
    <string name="tv_go_2_call_phone_activity">打电话</string>
    <string name="go_2_binder_test">binder_test</string>
    <string name="tv_go_2_scroll_activity">滑动冲突相关activity</string>
    <string name="tv_go_2_file">文件activity</string>


    <!--   文案   -->
    <string name="i_am_first_page">我是第一个页面，点击去第二个页面</string>
    <string name="i_am_second_page">我是第二个页面，点击去第三个页面</string>
    <string name="i_am_third_page">我是第三个页面，退出到第二个页面</string>

</resources>
