<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        <com.example.zt.base_android_knowledge.diy_view.PieView
                android:id="@+id/pw_pie_view"
                android:layout_width="@dimen/dimen_300"
                android:layout_height="@dimen/dimen_300"
                app:BuHeGe="@color/colorAccent"
                app:HeGe="@color/colorPrimary"
                app:YouXiu="@color/colorPrimaryDark"
                app:LiangHao="#666" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textColor="#FF1E1E1E"
                    android:textSize="@dimen/font_54"
                    android:gravity="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_26"
                    android:text="提交总数" />

        </LinearLayout>
    </FrameLayout>

    <TextView
            android:id="@+id/tv_go_2_launch_mode"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_launch_mode"
            android:layout_alignParentTop="true"
            android:layout_marginTop="186dp"
            android:layout_alignParentStart="true" />

    <TextView
            android:id="@+id/tv_go_2_activity_life_cycle"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_activity_life_cycle"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="186dp" />

    <TextView
            android:id="@+id/tv_go_2_android_service"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_android_service"
            android:layout_alignParentTop="true"
            android:layout_marginTop="187dp"
            android:layout_alignParentEnd="true" />

    <TextView
            android:id="@+id/tv_go_2_android_fragment"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_android_fragment"
            android:layout_alignParentTop="true"
            android:layout_marginTop="150dp"
            android:layout_alignStart="@+id/tv_go_2_android_service" />

    <TextView
            android:id="@+id/tv_go_2_recycler_view"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_recycler_view"
            android:layout_alignParentTop="true"
            android:layout_marginTop="150dp"
            android:layout_alignStart="@+id/tv_go_2_launch_mode" />

    <TextView
            android:id="@+id/tv_go_2_activity_activity_manager"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/tv_go_2_activity_activity_manager"
            android:layout_alignParentTop="true"
            android:layout_marginTop="150dp"
            android:layout_alignStart="@+id/tv_go_2_activity_life_cycle" />

    <TextView
            android:id="@+id/tv_go_2_usb_test_view"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_usb_test_client"
            android:layout_marginTop="240dp"
            android:layout_alignStart="@+id/tv_go_2_recycler_view" />

    <TextView
            android:id="@+id/tv_go_2_binder_test"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/go_2_binder_test"
            android:layout_marginTop="280dp"
            android:layout_alignStart="@+id/tv_go_2_recycler_view" />

    <TextView
            android:id="@+id/tv_go_2_scroll_activity"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/tv_go_2_scroll_activity"
            android:layout_marginTop="320dp"
            android:layout_alignStart="@+id/tv_go_2_recycler_view" />

    <EditText
            android:id="@+id/et_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="280dp"
            android:layout_centerHorizontal="true"
            android:hint="1231"
            android:layout_marginStart="150dp"
            android:autofillHints="222"
            android:inputType="number" />

    <TextView
            android:id="@+id/tv_go_2_file_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_go_2_file"
            android:layout_marginStart="150dp" />

    <TextView
            android:id="@+id/tv_go_2_call_phone_activity"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/tv_go_2_call_phone_activity"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="240dp" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_alignParentTop="true"
            android:layout_marginTop="240dp"
            android:gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_alignParentEnd="true">

    </LinearLayout>

    <TextView
            android:id="@+id/tv_express_hint"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#fdfcec"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scrollHorizontally="true"
            android:layout_marginTop="400dp"
            android:singleLine="true"
            android:textColor="#f86e21"
            android:visibility="gone"
            android:text="222222222222222222222222222222222222222222222222222222222222222222222222"
            android:textSize="12sp" />

    <ImageView
            android:id="@+id/iv_test"
            android:layout_width="280.75dp"
            android:layout_height="280.75dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_centerHorizontal="true" />

    <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fl_flex_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:flexWrap="wrap"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">

    </com.google.android.flexbox.FlexboxLayout>
</RelativeLayout>